feat: created error types
